# grpc-demo

./: Cargo.toml  README.md
grpc-client/: Cargo.toml
grpc-client/src/: main.rs
grpc-server/: Cargo.toml
grpc-server/src/: main.rs
proto/: Cargo.toml  build.rs  coffees.proto
proto/src/: lib.rs
