[package]
name = "grpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { version = "0.1.0", path = "../proto/" }
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"] }
